# api.rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml  surreal.yml
src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  tests.rs
