[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
surrealdb = { version = "2.1.0", features = ["kv-rocksdb"] }
reqwest = { version = "0.11", features = ["json"] }
argon2 = "0.5"
rand = "0.8"
